fix spacing in homepage

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,9 @@
 @import url("https://use.typekit.net/ymp0zrq.css");
+
+// * {
+//     border: 1px solid black;
+// }
+
 html,
 body {
     font-size: 100%;
@@ -82,13 +87,13 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 550px;
+    width: 600px;
     height: 50%;
 }
 
 .intro>div {
     width: 50%;
-    margin: 0 5%;
+    margin: 0 3%;
 }
 
 .introRight {
@@ -102,7 +107,7 @@ a {
 }
 
 .introLeft {
-    height: 90%;
+    height: 75%;
 }
 
 .name {
